Providing a more friendly title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-merlot
+title: Bananas are berries
+description: Will be uploading projects and testing Stripe features and integrations
